fix overflow

--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ section {
     min-height: 100vh;
     position: relative;
     z-index: 2;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(6, 6, 6);
+    overflow: hidden;
 }
 
 svg {
